src/styles.css
/* 1. Use a more-intuitive box-sizing model */
*,
*::before,
*::after {
	box-sizing: border-box;
}

/* 2. Remove default margin */
*:not(dialog) {
	margin: 0;
}

/* 3. Enable keyword animations */
@media (prefers-reduced-motion: no-preference) {
	html {
		interpolate-size: allow-keywords;
	}
}

body {
	/* 4. Add accessible line-height */
	line-height: 1.5;
	/* 5. Improve text rendering */
	-webkit-font-smoothing: antialiased;
}

/* 6. Improve media defaults */
img,
picture,
video,
canvas,
svg {
	display: block;
	max-width: 100%;
}

/* 7. Inherit fonts for form controls */
input,
button,
textarea,
select {
	font: inherit;
}

/* 8. Avoid text overflows */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
	overflow-wrap: break-word;
}

/* 9. Improve line wrapping */
p {
	text-wrap: pretty;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	text-wrap: balance;
}

/*
  10. Create a root stacking context
*/
#root,
#__next {
	isolation: isolate;
}

* {
	/* border: 1px solid red; */
	box-sizing: border-box;
	font-family: "Inter", sans-serif;
}

body {
	display: grid;
	grid-template-columns: 20vw 80vw;
	grid-template-areas:
		"sidebar main";
	margin: 0;
}

.projects-section {
	background-color: bisque;
	height: 100vh;
	grid-area: sidebar;
	padding: 12px;
}

.project-list-title {
	background-color: #c69f6c;
	padding: 0.5rem 0 0.5rem 1rem;
	border-radius: 24px;
	margin-bottom: 1rem;
}

.project-list,
.current-project,
.checklist-container,
.checklist,
.project,
.projects-section {
	display: flex;
	flex-direction: column;
	gap: 1rem;
}

.project {
	grid-area: main;
	padding: 12px;
	background-color: navajowhite;
}

.project-in-list {
	background-color: #a2602e;
}

.project-in-list:hover {
	background-color: #6f370f;
	cursor: pointer;
}

.project-buttons,
.task-lean-left,
.task-buttons,
.checklist-item-buttons {
	display: flex;
	flex-direction: row;
	gap: 0.5rem;
}

.drop-down.active {
	rotate: 180deg;
}

.toggle-button.active {
	background-color: #ffb5e6;
}

.toggle-button.active:hover {
	background-color: #5c2e00;
}

.task-lean-left {
	min-width: 0;
	flex-shrink: 1;
}

.current-project-title {
	background-color: burlywood;
	color: rgba(0, 0, 0, 0.3);
	display: flex;
	align-items: center;
	padding: 1rem 0 1rem 2.5rem;
	height: 5rem;
	border-radius: 24px;
	margin-bottom: 1rem;
}

.project-in-list,
.task,
.checklist-item,
.add-project,
.add-task,
.add-checklist-item {
	display: flex;
	flex-direction: row;
	font-size: 1.25rem;
	border-radius: 1.5rem;
	padding: 0.5rem 1rem 0.5rem 1rem;
	justify-content: space-between;
}

.add-project,
.add-task,
.add-checklist-item {
	color: rgba(0, 0, 0, 0.8);
}

.add-project:hover,
.add-task:hover,
.add-checklist-item:hover {
	background-color: rgba(0, 0, 0, 0.3);
	cursor: pointer;
}

.form-dialog {
	border: none;
	border-radius: 1.5rem;
	padding: 2rem;
	font-size: 1.25rem;
}

form.input-form {
	display: flex;
	flex-direction: column;
	gap: 1rem;
}

.input-form > .header {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: center;
}

.input-unit {
	display: flex;
	flex-direction: column;
	gap: 0.2rem;
}

.input-unit > label {
	font-size: 1rem;
	color: rgba(0, 0, 0, 0.6);
}

.input-unit > input {
	border-radius: 0.25rem;
	border: 1px solid black;
	padding: 1px 0.5rem;
}

.input-form .header .button {
	height: 3rem;
	width: 3rem;
}

.input-form > button[type="submit"] {
	border-radius: 1.5rem; 
	margin-top: 1rem;
	padding: 0.5rem 1rem;
	align-self: flex-end;
}

.input-form button {
	background-color: #ccc;
	border: none;
}

.input-form > button[type="submit"]:hover,
.input-form .header .button:hover {
	background-color: #aaa;
	cursor: pointer;
}

.input-form > button[type="submit"]:active,
.input-form .header .button:active {
	background-color: #666;
}

.task {
	background-color: #b28452;
}

.task:hover {
	background-color: #845321;
	cursor: pointer;
}

.checklist-container {
	margin-top: 12px;
	padding-left: 4rem;
}

.checklist-item {
	background-color: #b28452;
}

.checklist-item:hover {
	background-color: #845321;
	cursor: pointer;
}

.project-title,
.task-title,
.checklist-item-title {
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

.button {
	background-color: #9b6c39;
	height: 32px;
	min-width: 32px;
	width: 32px;
	border-radius: 50%;
	display: flex;
	justify-content: center;
	align-items: center;
}

.button:hover {
	background-color: mistyrose;
}

.project-buttons>.button {
	background-color: #e6b481;
}

.project-buttons>.button:hover {
	background-color: mistyrose;
}

